Let a world's rules be the only parts a reader can reach
The parts an author wrote were still in reach of a reader holding a world:
the guarantees a value's type states were handed both the clause and the
world, and worked out for themselves which parts to read, and the view a
reading is given offered the author's parts beside the world's. Both are the
shape the whole arrangement is against — a reader that can pick has to be
written to pick the right one, and the one that is not written to is the
defect.

So the reading of a type's guarantees is handed the clause its world has and
nothing else, and what the guarantee is filed under is put together outside
it, where the author's parts belong. The view shows the parts of this world
and no others.

The rule a clause is stays the parts' answer. A state about one rule has one
way to it, and a rule carried beside the parts that name it is two — so the
parts keep it, in the one place they now live.

The check that holds this is asked of the shape rather than of the reader
that was named: nothing is handed a world beside what that world would
narrow, whether the second half arrives as the clause, as a part of one, or
as the answer a world would have given.

Beside them, what the sweep of this branch's own diff turned up: a stale
world left in the walk over comparisons after it stopped reading one, a view
that answered about a clause it was never given parts of, a defensive arm
that kept an end nothing could tell from where the order stops anyway, a
world's omissions trusted to a set a caller had built, and an envelope that
could be made in one more way than the check beside it named.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>